# backend

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DELEGATE_CLAIMING.md  FAILOVER_DOCUMENTATION.md  HISTORICAL_PRICE_TRACKING.md  HISTORICAL_PRICE_TRACKING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOAD_TESTING.md  PR-FAILOVER.md  PR-TEMPLATE-ISSUE18.md  PR-TEMPLATE.md  PR_ADMIN_AUDIT_TRAIL.md  PR_ADMIN_UPDATE.md  PR_DESCRIPTION.md  PR_TEMPLATE.md  PUSH_NOTIFICATIONS_IMPLEMENTATION.md  RBAC_IMPLEMENTATION.md  README-DEPLOYMENT.md  README.md  README_HSM.md  REENTRANCY_SOLUTION.md  RUN_LOCALLY.md  VESTING_CLIFFS_IMPLEMENTATION.md  artillery-basic-load-test.yml  artillery-tge-comprehensive.yml  artillery-tge-load-test.yml  backup_postgres.sh  commit-and-pr.sh  database-failover.js  deploy.js  docker-compose.yml  index.js  jest.config.js  knexfile.js  manual-test.md  package-lock.json  package.json  rpc-retry.test.ts  (+10 more)
backend/: .dockerignore  .env  .env.example  .env.hsm.example  ACCOUNT_CONSOLIDATION_IMPLEMENTATION.md  API_DOCUMENTATION.md  AUDIT_IMPLEMENTATION.md  CONTRACT_UPGRADEABILITY_IMPLEMENTATION.md  Dockerfile  HSM_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY_CONTRACT_UPGRADEABILITY.md  IMPLEMENTATION_SUMMARY_PATH_PAYMENT_ANALYTICS.md  MULTI_CURRENCY_PATH_PAYMENT_ANALYTICS.md  RULE144_IMPLEMENTATION_SUMMARY.md  VAULT_REGISTRY_README.md  (+32 more)
contracts/merkle_vault/: Cargo.toml  NFT_IMPLEMENTATION.md  README.md
contracts/merkle_vault/src/: lib.rs  test.rs
contracts/reentrancy-tests/: Cargo.toml
contracts/reentrancy-tests/src/: lib.rs  tests.rs
(+280 files in other folders)
