[package]
name = "reentrancy-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
vesting-vault = { path = "../vesting-vault" }
malicious-contract = { path = "../malicious-contract" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
vesting-vault = { path = "../vesting-vault", features = ["testutils"] }
malicious-contract = { path = "../malicious-contract", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
